--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: mde-laga <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/11/13 15:04:46 by mde-laga          #+#    #+#              #
-#    Updated: 2019/01/12 14:52:29 by algautie         ###   ########.fr        #
+#    Updated: 2019/01/15 14:54:17 by mde-laga         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
